fix: column spacing

--- a/filing/css/styles.css
+++ b/filing/css/styles.css
@@ -635,7 +635,7 @@ footer {
 		padding-top: 55vh;
 	}
 	.images {
-		max-width: 1440px;
+		max-width: 1540px;
 	}
 }
 @media only screen and (max-width: 1460px) {
